Do some renaming, decide on crate list

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 members = [
-    "client", # Standalone client
-    "server", # Standalone server
-    "engine", # Just for ECS, message buf, protocol, etc.
-    "plugin", # Plugin only needs to import from client and engine. Server is just a binary
+    "client",
+    "server",
+    "engine",
+    "plugin",
+    "common",
 ]
