Start working on engine interface

--- a/plugin/Cargo.toml
+++ b/plugin/Cargo.toml
@@ -8,3 +8,4 @@ crate-type = ["cdylib"]
 
 [dependencies]
 cimvr_common = { path = "../common" }
+cimvr_engine_interface = { path = "../engine_interface" }
