--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cimvr_engine_interface = { path = "../engine_interface" }
