--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-nalgebra = "0.31.4"
+nalgebra = { version = "0.31.4", features = ["serde-serialize"] }
+cimvr_engine_interface = { path = "../engine_interface" }
+serde = { version = "1", features = ["derive"] }
