--- a/engine_interface/Cargo.toml
+++ b/engine_interface/Cargo.toml
@@ -9,5 +9,5 @@ wasm-plugin = []
 
 [dependencies]
 bincode = "1.3.3"
-serde = "1"
+serde = { version = "1", features = ["derive"] }
 once_cell = "1.16.0"
