Add second plugin, force make_app_state!() into a module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [workspace]
 members = [
+    "engine_interface",
+    "engine",
+    "common",
     "client",
     "server",
-    "engine",
     "plugin",
-    "common",
-    "engine_interface",
+    "plugin2",
 ]
