--- a/plugin/Cargo.toml
+++ b/plugin/Cargo.toml
@@ -9,3 +9,4 @@ crate-type = ["cdylib"]
 [dependencies]
 cimvr_common = { path = "../common" }
 cimvr_engine_interface = { path = "../engine_interface" }
+serde = { version = "1", features = ["derive"] }
