--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cimvr_engine = { path = "../engine" }
+cimvr_common = { path = "../common" }
