--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,11 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1"
 cimvr_engine = { path = "../engine" }
 cimvr_common = { path = "../common" }
-
+anyhow = "1"
 bytemuck = "1.12.3"
 glutin = "0.29.1"
-nalgebra = { version = "0.31.4" }
+nalgebra = "0.31.4"
 glow = "0.11.2"
+env_logger = "0.10.0"
+log = "0.4.17"
