Test server init

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1"
 cimvr_engine = { path = "../engine" }
 cimvr_common = { path = "../common" }
+env_logger = "0.10.0"
