--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 cimvr_engine_interface = { path = "../engine_interface" }
+serde = { version = "1", features = ["derive"] }
 wasmtime = "3.0.1"
 anyhow = "1"
 rand = "0.8"
