--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -15,3 +15,4 @@ nalgebra = "0.31.4"
 glow = "0.11.2"
 env_logger = "0.10.0"
 log = "0.4.17"
+structopt = { version = "0.3", default-features = false }
