--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,9 +10,18 @@ cimvr_engine = { path = "../engine" }
 cimvr_common = { path = "../common" }
 anyhow = "1"
 bytemuck = "1.12.3"
-glutin = "0.29.1"
+glutin = "0.29.0"
 nalgebra = "0.31.4"
 glow = "0.11.2"
 env_logger = "0.10.0"
 log = "0.4.17"
 structopt = { version = "0.3", default-features = false }
+egui = { version = "0.19.0", default-features = false, features = [
+#egui = { version = "0.19.0", default-features = false, features = [
+    "bytemuck",
+    "default_fonts", # Embed the default egui fonts.
+], git = "https://github.com/Masterchef365/egui.git", branch = "fix-glow-winit-dpi" }
+egui_glow = { version = "0.19.0", features = ["winit"], git = "https://github.com/Masterchef365/egui.git", branch = "fix-glow-winit-dpi" }
+#egui_glow = { version = "0.19.0", features = ["winit"] }
+egui-winit = { version = "0.19.0", default-features = false }
+raw-window-handle = "0.5.0"
