--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -16,12 +16,20 @@ glow = "0.11.2"
 env_logger = "0.10.0"
 log = "0.4.17"
 structopt = { version = "0.3", default-features = false }
-egui = { version = "0.19.0", default-features = false, features = [
+#egui_glow = { version = "0.19.0", features = ["winit"] }
 #egui = { version = "0.19.0", default-features = false, features = [
+egui = { version = "0.19.0", default-features = false, features = [
     "bytemuck",
     "default_fonts", # Embed the default egui fonts.
 ], git = "https://github.com/Masterchef365/egui.git", branch = "fix-glow-winit-dpi" }
 egui_glow = { version = "0.19.0", features = ["winit"], git = "https://github.com/Masterchef365/egui.git", branch = "fix-glow-winit-dpi" }
-#egui_glow = { version = "0.19.0", features = ["winit"] }
 egui-winit = { version = "0.19.0", default-features = false }
 raw-window-handle = "0.5.0"
+
+glutin-openxr-opengl-helper = { git = "https://github.com/ChatImproVR/rust-opengl-openxr-example.git", branch = "library" }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+openxr = { version = "0.17.0", features = ["loaded"] }
+
+[target.'cfg(target_os = "windows")'.dependencies]
+openxr = { version = "0.17.0", features = ["static"] }
