Fix build issue with openxr, ew

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,14 @@ members = [
     "engine_interface",
     "engine",
     "common",
-    "client",
     "server",
     "plugin",
     "plugin2",
     "plugin3",
+]
+# Causes a build issue with OpenXR if included in workspace
+exclude = [
+    "client",
 ]
 
 [profile.release]
