--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "plugin",
     "plugin2",
     "plugin3",
+    "example_plugins/channels"
 ]
 # Causes a build issue with OpenXR if included in workspace
 exclude = [
