--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "example_plugins/ui_example",
     "example_plugins/fluid-sim",
     "example_plugins/particle-life",
+    "example_plugins/shader",
 ]
 # Causes a build issue with OpenXR if included in workspace
 exclude = [
