pseudocode for rendering faces (and some comments)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "example_plugins/shader",
     "example_plugins/randomly_moving_cube",
     "example_plugins/gamepad",
+    "obj_parser"
 ]
 # Causes a build issue with OpenXR if included in workspace
 exclude = [
