Begin working on chat window

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "example_plugins/randomly_moving_cube",
     "example_plugins/gamepad",
     "example_plugins/keyboard",
+    "example_plugins/chat",
 ]
 
 # Causes a build issue with OpenXR if included in workspace
