--- a/engine_derive_macros/Cargo.toml
+++ b/engine_derive_macros/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "engine_derive_macros"
+name = "cimvr_derive_macros"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,8 +8,11 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-cimvr_common = { path = "/home/exiled/Documents/ChatImprovr/iteration0/common" }
-cimvr_engine_interface = { path = "/home/exiled/Documents/ChatImprovr/iteration0/engine_interface" }
+# cimvr_common = { path = "/home/exiled/Documents/ChatImprovr/iteration0/common" }
+# cimvr_engine_interface = { path = "/home/exiled/Documents/ChatImprovr/iteration0/engine_interface" }
+cimvr_common = { path = "../common"}
+cimvr_engine_interface = { path = "../engine_interface"}
 quote = "1.0"
 syn = "1.0"
-
+serde = { version = "1", features = ["derive"] }
+bincode = "1"
