Updated branch and deleted obsolete items.

--- a/example_plugins/camera/Cargo.toml
+++ b/example_plugins/camera/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-cimvr_common = { path = "/home/exiled/Documents/ChatImprovr/iteration0/common" }
-cimvr_engine_interface = { path = "/home/exiled/Documents/ChatImprovr/iteration0/engine_interface" }
+cimvr_common = { path = "../../common" }
+cimvr_engine_interface = { path = "../../engine_interface" }
 serde = { version = "1", features = ["derive"] }
