--- a/example_plugins/obj_parser/Cargo.toml
+++ b/example_plugins/obj_parser/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-# TODO: Use git here!
-cimvr_common = { git = "https://github.com/ChatImproVR/iteration0.git", branch = "main" }
-cimvr_engine_interface  = { git = "https://github.com/ChatImproVR/iteration0.git", branch = "main" }
+cimvr_common = { path = "../../common" }
+cimvr_engine_interface = { path = "../../engine_interface" }
 serde = { version = "1", features = ["derive"] }
