--- a/engine_derive_macros/Cargo.toml
+++ b/engine_derive_macros/Cargo.toml
@@ -10,8 +10,7 @@ proc-macro = true
 [dependencies]
 # cimvr_common = { path = "/home/exiled/Documents/ChatImprovr/iteration0/common" }
 # cimvr_engine_interface = { path = "/home/exiled/Documents/ChatImprovr/iteration0/engine_interface" }
-cimvr_common = { path = "../common"}
-cimvr_engine_interface = { path = "../engine_interface"}
+#cimvr_engine_interface = { path = "../engine_interface"}
 quote = "1.0"
 syn = "1.0"
 serde = { version = "1", features = ["derive"] }
