--- a/engine_interface/Cargo.toml
+++ b/engine_interface/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 serverside = []
 
 [dependencies]
+cimvr_derive_macros = { path = "../engine_derive_macros" }
 bincode = "1.3.3"
 serde = { version = "1", features = ["derive"] }
 once_cell = "1.16.0"
