--- a/physics/Cargo.toml
+++ b/physics/Cargo.toml
@@ -17,4 +17,6 @@ cimvr_engine_interface = {path = "../engine_interface"}
 cimvr_common = {path = "../common"}
 glam = "0.23.0"
 bitflags = "2.0.2"
+log = "0.4.17"
+nalgebra = "0.32.2"
 # bevy_reflect = "0.10.0"
