renamed physics module. Started engine rapier port
Changes:
- Hand making the context from the ground up.
- Making it so that we use core engine features like engine's query
- Correctly set up lib.rs for crate prelude
- Adding systems for engine -> configuration -> context

Needed Still:
- [ ] Need to set up update step
- [ ] Need configuration filled.
- [ ] Need to make components for physics items.
- [ ] Need colliders
- [ ] Need shapes for colliders
- [ ] Need Rigidbody
- [ ] Need Character controller

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "engine",
     "common",
     "server",
-    "physics",
+    "cimvr_physics_core",
     "engine_derive_macros",
     "example_plugins/camera",
     "example_plugins/channels",
