--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "engine",
     "common",
     "server",
-    "cimvr_physics_core",
+    "physics_core",
     "engine_derive_macros",
     "example_plugins/camera",
     "example_plugins/channels",
