Systems -> plugin, added cimvr -> rapier interface
* Added interface structs for cimvr to interface with rapier.
* Set up PhysicsPlugin struct to handle the physics engine-side.
* Filled in part of step_simulation for RapierContext.
* Set up cimvr/rapier configuration
* Started process for porting rigidbody

- Set up update step

- [ ] Need to set up update step
- [x] Need configuration filled
- [ ] Need to make components for physics items
- [ ] Finish Cimvr to Rapier struct interface
- [ ] Need colliders
- [ ] Need shapes for colliders
- [ ] Need Rigidbody
- [ ] Need Character controller

--- a/physics_core/Cargo.toml
+++ b/physics_core/Cargo.toml
@@ -10,7 +10,6 @@ serde-serialize = []
 dim3 = []
 # [feature]
 # dim3 = []
-
 [dependencies]
 glam = "0.23.0"
 nalgebra = { version = "0.32.2", features = ["glam023", "serde-serialize"]}
@@ -20,4 +19,6 @@ cimvr_common = {path = "../common"}
 cimvr_engine_interface = {path = "../engine_interface"}
 bitflags = {version = "2", features = ["serde"]} 
 serde = { version = "1", features = ["derive"] }
+anyhow = "1.0.70"
+itertools = "0.10.5"
 
