--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ members = [
     "example_plugins/gamepad",
     "example_plugins/keyboard",
     "example_plugins/chat",
-    "example_plugins/obj_parser"
+    "obj_parser"
 ]
 
 # Causes a build issue with OpenXR if included in workspace
