--- a/obj_parser/Cargo.toml
+++ b/obj_parser/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "obj_parser"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,6 +9,6 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-cimvr_common = { path = "../../common" }
-cimvr_engine_interface = { path = "../../engine_interface" }
+cimvr_common = { path = "../common" }
+cimvr_engine_interface = { path = "../engine_interface" }
 serde = { version = "1", features = ["derive"] }
