--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ members = [
     "example_plugins/gamepad",
     "example_plugins/keyboard",
     "example_plugins/chat",
+    "example_plugins/multiple_queries",
 ]
 
 # Causes a build issue with OpenXR if included in workspace
