don't forget your commas

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ members = [
     "example_plugins/gamepad",
     "example_plugins/keyboard",
     "example_plugins/chat",
-    "obj_loader"
+    "obj_loader",
     "example_plugins/camera2d",
 ]
 
