Parenting plugin (untested)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ members = [
     "example_plugins/chat",
     "example_plugins/multiple_queries",
     "example_plugins/camera2d",
+    "example_plugins/parenting",
 ]
 
 # Causes a build issue with OpenXR if included in workspace
