Fix parenting and demo it

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
     "example_plugins/multiple_queries",
     "example_plugins/camera2d",
     "example_plugins/parenting",
+    "example_plugins/parenting_demo",
 ]
 
 # Causes a build issue with OpenXR if included in workspace
