--- a/example_plugins/parenting_demo/Cargo.toml
+++ b/example_plugins/parenting_demo/Cargo.toml
@@ -1,15 +1,13 @@
 [package]
-name = "parenting"
+name = "parenting_demo"
 version = "0.1.0"
 edition = "2021"
 
-[features]
-library = []
-
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 cimvr_common = { path = "../../common" }
 cimvr_engine_interface = { path = "../../engine_interface" }
+parenting = { path = "../parenting", features = ["library"] }
 serde = { version = "1", features = ["derive"] }
