--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-glam = { version = "0.23.0", features = ["serde"] }
+glam = { version = "0.23.0", features = ["serde", "bytemuck"] }
 cimvr_engine_interface = { path = "../engine_interface" }
 serde = { version = "1", features = ["derive"] }
 bytemuck = "1.12.3"
