--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -15,7 +15,7 @@ cimvr_common = { path = "../common" }
 anyhow = "1"
 bytemuck = "1.12.3"
 glutin = "0.30.8"
-glow = "0.11.2"
+glow = "0.12"
 env_logger = "0.10.0"
 log = "0.4.17"
 structopt = { version = "0.3", default-features = false }
@@ -30,6 +30,7 @@ egui-winit = { version = "0.21.1" }
 raw-window-handle = "0.5.0"
 gilrs = { version = "0.10.2", default-features = false, features = ["xinput"] }
 glutin-openxr-opengl-helper = { git = "https://github.com/ChatImproVR/rust-opengl-openxr-example.git", rev = "c56b2dc" }
+glutin-winit = "0.3.0"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openxr = { version = "0.17.1", optional = true, features = ["loaded"] }
