--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ members = [
     "example_plugins/parenting_demo",
     "example_plugins/xyz_reference",
     "example_plugins/obj-axes",
+    "example_plugins/interdimensional",
 ]
 
 # Causes a build issue with OpenXR if included in workspace
