Got the user facing API sorted out, now onto setting up the translation layer b/w rapier

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,3 +12,4 @@ cimvr_common = { path = "../common" }
 env_logger = "0.10.0"
 structopt = { version = "0.3", default-features = false }
 log = "0.4.17"
+rapier3d = { version = "0.17.2", features = ["serde-serialize"]}
