Basic avatar movement

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ members = [
     "example_plugins/mouse-capture",
     "example_plugins/first-person",
     "example_plugins/vr-teleport",
+    "example_plugins/avatars",
 ]
 
 # Causes a build issue with OpenXR if included in workspace
