--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
     "example_plugins/first-person",
     "example_plugins/vr-teleport",
     "example_plugins/avatars",
+    "example_plugins/grid",
 ]
 
 # Causes a build issue with OpenXR if included in workspace
