--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -20,7 +20,7 @@ env_logger = "0.10.0"
 log = "0.4.17"
 structopt = { version = "0.3", default-features = false }
 eframe = "0.22.0"
-#egui_glow = { version = "0.19.0", features = ["winit"] }
+egui_glow = { version = "0.22.0", features = ["winit"] }
 #egui = { version = "0.19.0", default-features = false, features = [
 #egui = { version = "0.19.0", default-features = false, features = [
     #"bytemuck",
