--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -21,6 +21,7 @@ log = "0.4.17"
 structopt = { version = "0.3", default-features = false }
 eframe = "0.22.0"
 egui_glow = { version = "0.22.0", features = ["winit"] }
+egui_dock = "0.6.3"
 #egui = { version = "0.19.0", default-features = false, features = [
 #egui = { version = "0.19.0", default-features = false, features = [
     #"bytemuck",
