--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -40,3 +40,8 @@ directories = "5.0.1"
 #[target.'cfg(target_os = "windows")'.dependencies]
 #openxr = { version = "0.17.1", optional = true, features = ["static"] }
 #glutin-openxr-opengl-helper = { git = "https://github.com/ChatImproVR/rust-opengl-openxr-example.git", rev = "c56b2dc" }
+
+[patch.crates-io]
+eframe = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde" }
+egui = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde" }
+egui_glow = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde" }
