Just the cargo changes

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -9,5 +9,5 @@ cimvr_engine_interface = { path = "../engine_interface" }
 serde = { version = "1", features = ["derive"] }
 bytemuck = { version = "1.13.1", features = ["extern_crate_alloc"] }
 #egui = { version = "0.22.0", features = ["serde"], optional = true }
-egui = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde", features = ["serde"] }
-epaint = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde", features = ["serde", "bytemuck"] }
+egui = { git = "https://github.com/Masterchef365/egui.git", branch = "extern-texture-mgr", features = ["serde"] }
+epaint = { git = "https://github.com/Masterchef365/egui.git", branch = "extern-texture-mgr", features = ["serde", "bytemuck"] }
