--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -22,7 +22,7 @@ structopt = { version = "0.3", default-features = false }
 #eframe = "0.22.0"
 #egui_glow = { version = "0.22.0", features = ["winit"] }
 #egui_dock = "0.6.3"
-egui_dock = { git = "https://github.com/Masterchef365/egui_dock.git", branch = "more-serde" }
+egui_dock = { git = "https://github.com/Masterchef365/egui_dock.git", branch = "insert-texture" }
 #egui = { version = "0.19.0", default-features = false, features = [
 #egui = { version = "0.19.0", default-features = false, features = [
     #"bytemuck",
@@ -42,7 +42,7 @@ directories = "5.0.1"
 #openxr = { version = "0.17.1", optional = true, features = ["static"] }
 #glutin-openxr-opengl-helper = { git = "https://github.com/ChatImproVR/rust-opengl-openxr-example.git", rev = "c56b2dc" }
 
-eframe = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde" }
-#egui = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde" }
-egui_glow = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde" }
-epaint = { git = "https://github.com/Masterchef365/egui.git", branch = "more-serde", features = ["extra_asserts"] }
+eframe = { git = "https://github.com/Masterchef365/egui.git", branch = "insert-texture" }
+#egui = { git = "https://github.com/Masterchef365/egui.git", branch = "insert-texture" }
+egui_glow = { git = "https://github.com/Masterchef365/egui.git", branch = "insert-texture" }
+epaint = { git = "https://github.com/Masterchef365/egui.git", branch = "insert-texture", features = ["extra_asserts"] }
