--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = []
+default = ["embed-server"]
 embed-server = ["cimvr_server"]
 #vr = ["openxr"]
 
