--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["embed-server"]
-embed-server = ["cimvr_server"]
+default = []
 #vr = ["openxr"]
 
 [dependencies]
@@ -34,8 +33,6 @@ egui_dock = { git = "https://github.com/Masterchef365/egui_dock.git", branch = "
 #raw-window-handle = "0.5.0"
 gilrs = { version = "0.10.2", default-features = false, features = ["xinput"] }
 directories = "5.0.1"
-
-cimvr_server = { path = "../server", optional = true }
 
 #[target.'cfg(target_os = "linux")'.dependencies]
 #openxr = { version = "0.17.1", optional = true, features = ["loaded"] }
