--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1", features = ["derive"] }
 wasm-bridge = "0.2.2"
 anyhow = "1"
 rand = "0.8"
+getrandom = { version = "0.2", features = ["js"] }
 ahash = "0.8.2"
 log = "0.4.17"
 notify = "5.0.0"
