--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -2,6 +2,7 @@
 name = "cimvr_client"
 version = "0.1.0"
 edition = "2021"
+resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,7 +15,7 @@ cimvr_engine = { path = "../engine" }
 cimvr_common = { path = "../common" }
 anyhow = "1"
 bytemuck = { version = "1.13.1", features = ["extern_crate_alloc"] }
-glutin = "0.29.0"
+#glutin = "0.29.0"
 glow = "0.12"
 env_logger = "0.10.0"
 log = "0.4.17"
