--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,7 +7,8 @@ resolver = "2"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = []
+default = ["embed-server"]
+embed-server = []
 #vr = ["openxr"]
 
 [dependencies]
